Fix z-index

--- a/wp-content/plugins/post/post-plugin.css
+++ b/wp-content/plugins/post/post-plugin.css
@@ -1,4 +1,4 @@
-.pw-float-left { height:0px!important;z-index:-1 }
+.pw-float-left { height:0px!important }
 .pw-widget { padding:10px;margin-left:30px;height:0px!important;z-index:-1 }
 
 .entry-content .ra1-pw, .entry-content .pw-widget{margin-bottom:10px}
